Support multiple hubs (#235)
Added support for multiple hub values
